--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body{
 	<div class="container">
 	  <div class="centered-text">
 		<div class="title" >
-		Soon
+		Soon..
 		</div>
 	  </div>
 	</div>
